Closed Bug 1834984 Opened 1 year ago Closed 1 year ago

Fix a crash when comparing the end time of buffered data to the duration of a MediaSource

Categories

(Core :: Audio/Video: Playback, defect)

defect

Tracking

()

RESOLVED FIXED
115 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox113 --- unaffected
firefox114 --- unaffected
firefox115 --- fixed

People

(Reporter: padenot, Assigned: padenot)

References

(Regression)

Details

(Keywords: regression)

Crash Data

Attachments

(1 file)

We can simply do the comparison in floating point, side-stepping the issue.

This fixes crashes such as: https://crash-stats.mozilla.org/report/index/f13f3df7-3659-42ff-b9c7-794400230525.

Attachment #9335831 - Attachment description: WIP: Bug 1834984 - Fix a crash when comparing the end time of buffered data to the duration of a MediaSource. → Bug 1834984 - Fix a crash when comparing the end time of buffered data to the duration of a MediaSource.
Pushed by padenot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c8395f98d2f4 Fix a crash when comparing the end time of buffered data to the duration of a MediaSource.
Pushed by nfay@mozilla.com: https://hg.mozilla.org/mozilla-central/rev/eaba732ce0ab Fix a crash when comparing the end time of buffered data to the duration of a MediaSource.
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch
Crash Signature: [@ mozilla::media::TimeUnit::FromSeconds]
Keywords: regression
Regressed by: 1817997

Set release status flags based on info from the regressing bug 1817997

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: