Bug 1834984 - Fix a crash when comparing the end time of buffered data to the duration of a MediaSource.

Differential Revision: https://phabricator.services.mozilla.com/D179044